--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "reset_heroku": "heroku pg:reset DATABASE"
   },
   "engines": {
-    "node": "4.2.x",
-    "npm": "2.14.x"
+    "node": "4.4.x",
+    "npm": "2.15.x"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -20,6 +20,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
+    "es6-promise": "^3.2.1",
     "express": "~4.13.1",
     "express-flash": "0.0.2",
     "express-partials": "^0.3.0",
